--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,26 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/libs/font-awesome/css/font-awesome.min.css"
+    />
+    <link 
+      rel="stylesheet" 
+      href="%PUBLIC_URL%/libs/animate/animate.min.css" 
+    />
     <title>Social Blog App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="%PUBLIC_URL%/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/libs/font-awesome/font-awesome.js"></script>
   </body>
 </html>
